deploy/workloads/hospital-frontend/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hospital-frontend-default-deny
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hospital-frontend
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traefik-to-fe
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hospital-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app: traefik
      ports:
        - protocol: TCP
          port: 8000
